[package]
name = "aetherment"
version = "0.1.6"
edition = "2021"

[dependencies]
# renderer = {path = "../renderer", optional = true}
renderer = {path = "../renderer"}
noumenon = {path = "../noumenon"}

egui = "0.31"
egui_dock = "0.16"
egui_file = "0.22"
egui_dnd = "0.12"
egui_extras = {version = "0.31", features = ["image", "http"]}
egui_commonmark = {version = "0.20", default-features = false}

serde = {version = "1.0.171", features = ["derive"]}
serde_json = "1.0.103"

log = "0.4.27"
rand = "0.8.5"
dirs = "5.0.1"
binrw = "0.11.2"
ureq = {version = "3.0.11", features = ["json"]}
tempfile = "3.10.1"
open = "5.3.0"
clipboard = "0.5.0"
glam = {version = "0.30.4"}

mime_guess2 = "=2.0.5"
image = {version = "0.25.6", default-features = false, features = ["png", "jpeg", "gif"]}
zip = {version = "0.6.6", features = ["deflate"]}
flate2 = "1.0.26"
blake3 = "1.8.2"
base32 = "0.5.0"
base64 = "0.22.1"

[features]
client = []
plugin = []

# client = ["dep:renderer", "renderer/egui"]
# plugin = ["dep:renderer", "renderer/imgui"]