[package]
name = "client"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aetherment = {path = "../aetherment", features = ["client"]}
eframe = {version = "0.31", features = ["wgpu"]}
clap = "4.5.4"
dirs = "5.0.1"