[package]
name = "plugin"
version = "0.7.1"
edition = "2021"

[lib]
name = "aetherment_core"
crate-type = ["cdylib"]

[build-dependencies]
bindgen = "0.72.1"

[dependencies.windows]
version = "0.61"
features = [
	"Win32_Graphics_Direct3D",
	"Win32_Graphics_Direct3D11",
	"Win32_Graphics_Dxgi_Common",
	"Win32_Graphics_Direct3D_Fxc",
	"Win32_UI_WindowsAndMessaging",
]

[dependencies]
renderer = {path = "../renderer", features = ["d3d11"]}
aetherment = {path = "../aetherment", features = ["plugin"]}

log = "0.4.27"
naga = {version = "24.0.0", features = ["wgsl-in", "hlsl-out"]}
egui = "0.31"
clipboard-win = "5.4.0"
opener = "0.8.2"