[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = {version = "0.60.1", optional = true}

[dependencies]
egui = {version = "0.27.2", optional = true}
dirs = "5.0.1"
time = {version = "0.3.36", features = ["formatting"]}

[features]
# default = ["egui"]
egui = ["dep:egui"]
imgui = ["dep:bindgen"]