[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.27"
bytemuck = "1.23.1"
bitflags = "2.9.1"
glam = {version = "0.30.4", features = ["bytemuck"]}
wgpu = {version = "24.0.5", optional = true}
naga = {version = "24.0.0", features = ["wgsl-in", "hlsl-out"], optional = true}

[dependencies.windows]
version = "0.61"
optional = true
features = [
	"Win32_Graphics_Direct3D",
	"Win32_Graphics_Direct3D11",
	"Win32_Graphics_Dxgi_Common",
	"Win32_Graphics_Direct3D_Fxc",
]

[features]
d3d11 = ["dep:windows", "dep:naga"]
wgpu = ["dep:wgpu"]